Set max width to sponsor logo to prevent over-stretch

--- a/src/_includes/css/components/sponsors.css
+++ b/src/_includes/css/components/sponsors.css
@@ -21,6 +21,7 @@
 .sponsor-list-item-link img {
   display: block;
   width: auto;
+  max-width: 100%;
   margin: 0;
 }
 
